rpc queue model change