@@ -1,7 +1,5 @@
 package com.xlrpc.zookeeper.digest;
 
-import sun.misc.BASE64Decoder;
-import sun.misc.BASE64Encoder;
 
 import javax.crypto.Cipher;
 import java.io.ByteArrayOutputStream;
@@ -12,6 +10,7 @@ import java.security.KeyFactory;
 import java.security.PublicKey;
 import java.security.spec.PKCS8EncodedKeySpec;
 import java.security.spec.X509EncodedKeySpec;
+import java.util.Base64;
 import java.util.Properties;
 
 //import org.bouncycastle.asn1.ASN1Sequence;
@@ -55,7 +54,7 @@ public class RSACrypto {
    * <p>
    * 公钥加密
    * </p>
-   * 
+   *
    * @param message
    *          源数据
    * @param publicKeyFile
@@ -121,7 +120,7 @@ public class RSACrypto {
         "-----END PUBLIC KEY-----", "").replaceAll("-----BEGIN RSA PUBLIC KEY-----", "").replaceAll(
             "-----END RSA PUBLIC KEY-----", "").replace("\n", "").trim();
 
-    byte[] keyBytes = new BASE64Decoder().decodeBuffer(publicKey);
+    byte[] keyBytes =  Base64.getDecoder().decode(publicKey);
     X509EncodedKeySpec x509KeySpec = new X509EncodedKeySpec(keyBytes);
     KeyFactory keyFactory = KeyFactory.getInstance(KEY_ALGORITHM);
     Key publicK = keyFactory.generatePublic(x509KeySpec);
@@ -147,7 +146,7 @@ public class RSACrypto {
     }
     byte[] encryptedData = out.toByteArray();
     out.close();
-    return new BASE64Encoder().encodeBuffer(encryptedData);
+    return Base64.getEncoder().encodeToString(encryptedData);
   }
 
   /** */
@@ -155,7 +154,7 @@ public class RSACrypto {
    * <P>
    * 私钥解密
    * </p>
-   * 
+   *
    * @param message
    *          已加密数据(BASE64编码)
    * @param privateKeyFile
@@ -220,8 +219,7 @@ public class RSACrypto {
     privateKey = privateKey.replaceAll("-----BEGIN RSA PRIVATE KEY-----", "").replaceAll(
         "-----END RSA PRIVATE KEY-----", "").replaceAll("-----BEGIN PRIVATE KEY-----", "")
         .replaceAll("-----END PRIVATE KEY-----", "").replaceAll("\n", "").trim();
-
-    byte[] keyBytes = new BASE64Decoder().decodeBuffer(privateKey);
+    byte[] keyBytes = Base64.getDecoder().decode(privateKey);
     // RSAPrivateKeyStructure asn1PrivKey = new
     // RSAPrivateKeyStructure((ASN1Sequence)
     // ASN1Sequence.fromByteArray(keyBytes));
@@ -235,7 +233,7 @@ public class RSACrypto {
     Key privateK = keyFactory.generatePrivate(pkcs8KeySpec);
     Cipher cipher = Cipher.getInstance(keyFactory.getAlgorithm());
     cipher.init(Cipher.DECRYPT_MODE, privateK);
-    byte[] encryptedData = new BASE64Decoder().decodeBuffer(message);
+    byte[] encryptedData =    Base64.getDecoder().decode(message);
     int inputLen = encryptedData.length;
     ByteArrayOutputStream out = new ByteArrayOutputStream();
     int offSet = 0;
@@ -262,7 +260,7 @@ public class RSACrypto {
    * <P>
    * 验证签名
    * </p>
-   * 
+   *
    * @param content
    *          原值
    * @param sign
@@ -274,7 +272,8 @@ public class RSACrypto {
    */
   public static boolean verify(String content, String sign, String publicKey) {
     try {
-      byte[] keyBytes = new BASE64Decoder().decodeBuffer(publicKey);
+        Base64.Decoder decoder = Base64.getDecoder();
+        byte[] keyBytes = decoder.decode(publicKey);
       X509EncodedKeySpec x509KeySpec = new X509EncodedKeySpec(keyBytes);
       KeyFactory keyFactory = KeyFactory.getInstance(KEY_ALGORITHM);
       PublicKey publicK = keyFactory.generatePublic(x509KeySpec);
@@ -284,7 +283,7 @@ public class RSACrypto {
       signature.initVerify(publicK);
       signature.update(content.getBytes("UTF-8"));
 
-      boolean bverify = signature.verify(new BASE64Decoder().decodeBuffer(sign));
+      boolean bverify = signature.verify(Base64.getDecoder().decode(sign));
       return bverify;
 
     } catch (Exception e) {
@@ -299,7 +298,7 @@ public class RSACrypto {
    * <P>
    * 验证签名
    * </p>
-   * 
+   *
    * @param content
    *          原值
    * @param sign
@@ -343,9 +342,9 @@ public class RSACrypto {
       if (sign == null || "".equals(sign) || publicKey == null || "".equals(publicKey)) {
         return false;
       }
-      
 
-      byte[] keyBytes = new BASE64Decoder().decodeBuffer(PUBLICKEY);
+
+      byte[] keyBytes = Base64.getDecoder().decode(PUBLICKEY);
       X509EncodedKeySpec x509KeySpec = new X509EncodedKeySpec(keyBytes);
       KeyFactory keyFactory = KeyFactory.getInstance(KEY_ALGORITHM);
       PublicKey publicK = keyFactory.generatePublic(x509KeySpec);
@@ -355,7 +354,7 @@ public class RSACrypto {
       signature.initVerify(publicK);
       signature.update(publicKey.getBytes("UTF-8"));
 
-      boolean bverify = signature.verify(new BASE64Decoder().decodeBuffer(sign));
+      boolean bverify = signature.verify(Base64.getDecoder().decode(sign));
       return bverify;
 
     } catch (Exception e) {
@@ -364,5 +363,5 @@ public class RSACrypto {
 
     return false;
   }
-  
+
 }
